--- a/index.html
+++ b/index.html
@@ -1,120 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="assets/style.css"/>
-    <title>Work Day Scheduler</title>
-  </head>
 
-  <body>
-    <header class="jumbotron">
-      <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
-    </header>
-    <div class="container">
-        <div id="time" class="row time-block">
-          <div class="col-md-1 hour">
-              8:00 AM
-          </div>
-          <textarea class="col-md-10 task">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Work Day Scheduler</title>
+</head>
+
+<body>
+  <header class="jumbotron">
+    <h1 class="display-3">Work Day Scheduler</h1>
+    <p class="lead">A simple calendar app for scheduling your work day</p>
+    <p id="currentDay" class="lead"></p>
+  </header>
+  <div class="container">
+    <div id="8-hour" class="row time-block">
+      <div class="col-md-1 hour">
+        8:00 AM
+      </div>
+      <textarea class="col-md-10 task">
           </textarea>
-          <button class="btn saveBtn col-md-1"><i class="fas fa-thumbtack"></i></button>
-      </div>
-      <div id="time" class="row time-block">
-        <div class="col-md-1 hour">
-            9:00 AM
-        </div>
-        <textarea class="col-md-10 task">
-        </textarea>
-        <button class="btn saveBtn col-md-1"><i class="fas fa-thumbtack"></i></button>
-      </div>
-      <div id="time" class="row time-block">
-        <div class="col-md-1 hour">
-            10:00 AM
-        </div>
-        <textarea class="col-md-10 task">
-        </textarea>
-        <button class="btn saveBtn col-md-1"><i class="fas fa-thumbtack"></i></button>
-      </div>
-      <div id="time" class="row time-block">
-        <div class="col-md-1 hour">
-            11:00 AM
-        </div>
-        <textarea class="col-md-10 task">
-        </textarea>
-        <button class="btn saveBtn col-md-1"><i class="fas fa-thumbtack"></i></button>
-      </div>
-      <div id="time" class="row time-block">
-        <div class="col-md-1 hour">
-            12:00 PM
-        </div>
-        <textarea class="col-md-10 task">
-        </textarea>
-        <button class="btn saveBtn col-md-1"><i class="fas fa-thumbtack"></i></button>
-      </div>
-      <div id="time" class="row time-block">
-        <div class="col-md-1 hour">
-            1:00 PM
-        </div>
-        <textarea class="col-md-10 task">
-        </textarea>
-        <button class="btn saveBtn col-md-1"><i class="fas fa-thumbtack"></i></button>
-      </div>
-      <div id="time" class="row time-block">
-        <div class="col-md-1 hour">
-            2:00 PM
-        </div>
-        <textarea class="col-md-10 task">
-        </textarea>
-        <button class="btn saveBtn col-md-1"><i class="fas fa-thumbtack"></i></button>
-      </div>
-      <div id="time" class="row time-block">
-        <div class="col-md-1 hour">
-            3:00 PM
-        </div>
-        <textarea class="col-md-10 task">
-        </textarea>
-        <button class="btn saveBtn col-md-1"><i class="fas fa-thumbtack"></i></button>
-      </div>
-      <div id="time" class="row time-block">
-        <div class="col-md-1 hour">
-            4:00 PM
-        </div>
-        <textarea class="col-md-10 task">
-        </textarea>
-        <button class="btn saveBtn col-md-1"><i class="fas fa-thumbtack"></i></button>
-      </div>
-      <div id="time" class="row time-block">
-        <div class="col-md-1 hour">
-            5:00 PM
-        </div>
-        <textarea class="col-md-10 task">
-        </textarea>
-        <button class="btn saveBtn col-md-1"><i class="fas fa-thumbtack"></i></button>
-      </div>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-thumbtack"></i></button>
     </div>
-      <!-- Timeblocks go here -->
-    
-    
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="assets/script.js"></script>
-  </body>
+    <div id="9-hour" class="row time-block">
+      <div class="col-md-1 hour">
+        9:00 AM
+      </div>
+      <textarea class="col-md-10 task">
+        </textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-thumbtack"></i></button>
+    </div>
+    <div id="10-hour" class="row time-block">
+      <div class="col-md-1 hour">
+        10:00 AM
+      </div>
+      <textarea class="col-md-10 task">
+        </textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-thumbtack"></i></button>
+    </div>
+    <div id="11-hour" class="row time-block">
+      <div class="col-md-1 hour">
+        11:00 AM
+      </div>
+      <textarea class="col-md-10 task">
+        </textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-thumbtack"></i></button>
+    </div>
+    <div id="12-hour" class="row time-block">
+      <div class="col-md-1 hour">
+        12:00 PM
+      </div>
+      <textarea class="col-md-10 task">
+        </textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-thumbtack"></i></button>
+    </div>
+    <div id="1-hour" class="row time-block">
+      <div class="col-md-1 hour">
+        1:00 PM
+      </div>
+      <textarea class="col-md-10 task">
+        </textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-thumbtack"></i></button>
+    </div>
+    <div id="2-hour" class="row time-block">
+      <div class="col-md-1 hour">
+        2:00 PM
+      </div>
+      <textarea class="col-md-10 task">
+        </textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-thumbtack"></i></button>
+    </div>
+    <div id="3-hour" class="row time-block">
+      <div class="col-md-1 hour">
+        3:00 PM
+      </div>
+      <textarea class="col-md-10 task">
+        </textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-thumbtack"></i></button>
+    </div>
+    <div id="6-hour" class="row time-block">
+      <div class="col-md-1 hour">
+        6:00 PM
+      </div>
+      <textarea class="col-md-10 task">
+        </textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-thumbtack"></i></button>
+    </div>
+    <div id="7-hour" class="row time-block">
+      <div class="col-md-1 hour">
+        7:00 PM
+      </div>
+      <textarea class="col-md-10 task">
+        </textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-thumbtack"></i></button>
+    </div>
+  </div>
+  <!-- Timeblocks go here -->
+
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+  <script src="script.js"></script>
+</body>
+
 </html>
